--- a/001basic/index.html
+++ b/001basic/index.html
@@ -1,10 +1,7 @@
 <html>
-<head> 
-  <title>唐诗一首<title/>
-  </head>
+<head>  <title>唐诗一首<title/> </head>
 <body>
   
-
   <h1>静夜思</h1>
   
   <p>床前明月光</p>
@@ -12,7 +9,7 @@
   <p>举头望明月</p>
   <p>低头思故乡</p>
   
-  
+
   </body>
 
 </html>
