--- a/001basic/index.html
+++ b/001basic/index.html
@@ -1,5 +1,16 @@
 <html>
-<head>  <title>唐诗一首</title> </head>
+<head>  <title>唐诗一首</title>
+  <style type="text/css">
+    body{
+    background-image:url(./image/0.jpg);
+    background-size:100% 100%;
+    height:100%;
+    }
+    html{height:100%;
+    
+    }
+  </style>
+  </head>
 <body>
   <img src='./image/0.jpg'>
   <h1>静夜思</h1>
