--- a/001basic/index.html
+++ b/001basic/index.html
@@ -9,6 +9,13 @@
     html{height:100%;
     
     }
+    
+    @keyframes myfirst
+    {
+      from{background:red;}
+      to{background:green;}
+    }
+    h1{animation:myfirst 1s;}
   </style>
   </head>
 <body>
