--- a/001basic/index.html
+++ b/001basic/index.html
@@ -12,10 +12,10 @@
     
     @keyframes myfirst
     {
-      from{background:red;}
-      to{background:green;}
+      from{opacity:0}
+      to{opacity:100}
     }
-    h1{animation:myfirst 1s;}
+    h1{animation:myfirst 1s infinite;}
   </style>
   </head>
 <body>
