--- a/001basic/index.html
+++ b/001basic/index.html
@@ -15,7 +15,7 @@
       from{opacity:0}
       to{opacity:100}
     }
-    h1{animation:myfirst 1s infinite;}
+    h1 p{animation:myfirst 1s infinite;}
   </style>
   </head>
 <body>
