--- a/001basic/index.html
+++ b/001basic/index.html
@@ -19,7 +19,11 @@
   </style>
   </head>
 <body>
+<audio controls="controls">
+  <source src="/song.ogg" type="audio/ogg">
 
+Your browser does not support the audio element.
+</audio>
   <h1>静夜思</h1>
   
   <p>床前明月光</p>
