--- a/001basic/index.html
+++ b/001basic/index.html
@@ -21,7 +21,7 @@
 <body>
 <audio controls="controls">
   <source src="/song.ogg" type="audio/ogg">
-
+  <source src="/song.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
   <h1>静夜思</h1>
