--- a/001basic/index.html
+++ b/001basic/index.html
@@ -20,7 +20,7 @@
   </head>
 <body>
 <audio controls="controls">
-  <source src="/song.ogg" type="audio/ogg">
+  <source src="001basic/song.ogg" type="audio/ogg">
   <source src="/song.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
