--- a/001basic/index.html
+++ b/001basic/index.html
@@ -20,8 +20,8 @@
   </head>
 <body>
 <audio controls="controls">
-  <source src="/001basic/song.ogg" type="audio/ogg">
-  <source src="/沧海一声笑.mp3" type="audio/mpeg">
+  <source src="/" type="audio/ogg">
+  <source src="/001basic/沧海一声笑.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
   <h1>静夜思</h1>
