--- a/001basic/index.html
+++ b/001basic/index.html
@@ -21,7 +21,7 @@
 <body>
 <audio controls="controls">
  
-  <source src="/沧海一声笑.mp3" type="audio/mpeg">
+  <source src="/沧海一声笑.mp3" type="audio/mpeg" autoplay="autoplay">
 Your browser does not support the audio element.
 </audio>
   <h1>静夜思</h1>
