--- a/001basic/index.html
+++ b/001basic/index.html
@@ -19,11 +19,14 @@
   </style>
   </head>
 <body>
+  
+  
 <audio controls="controls">
- 
-  <source src="/沧海一声笑.mp3" type="audio/mpeg" autoplay="autoplay">
-Your browser does not support the audio element.
+ <source src="沧海一声笑.mp3" type="audio/mpeg" autoplay="autoplay">
 </audio>
+  
+  
+  
   <h1>静夜思</h1>
   
   <p>床前明月光</p>
