--- a/001basic/index.html
+++ b/001basic/index.html
@@ -22,7 +22,7 @@
   
   
 <audio controls="controls">
- <source src="沧海一声笑.mp3" type="audio/mpeg" autoplay="autoplay">
+ <source src="song.ogg" type="audio/ogg" autoplay="autoplay">
 </audio>
   
   
