--- a/001basic/page.html
+++ b/001basic/page.html
@@ -6,8 +6,8 @@
 
     }
 
-    page{
-    
+    page
+    {
     font-size:60px;
     }
     #c{
@@ -33,9 +33,6 @@
   </style>
   </head>
 <body>
-  
-
-
   
 <page id="c">春</page>
 <page id="x">夏</page>
