--- a/001basic/page.html
+++ b/001basic/page.html
@@ -21,7 +21,7 @@
     }
        #d{
     background-color:black;
-         font-color:white;
+       color:white;
     }
     @keyframes myfirst
     {
