--- a/001basic/page.html
+++ b/001basic/page.html
@@ -12,20 +12,20 @@
     }
     #c{
     background-color:green;
-      animation: c 3s inifite;
+      animation: c 8s infinite;
     }
        #x{
     background-color:red;
-         animation: x 3s inifite;
+         animation: x 8s infinite;
     }
        #q{
     background-color:white;
-         animation:q 3s inifite;
+         animation:q 8s infinite;
     }
        #d{
     background-color:black;
        color:white;
-         animation: d 3s inifite;
+         animation: d 8s infinite;
     }
     @keyframes c
     {
